TAG: seqcacheload-tr9782-BP
DATE: 02/18/2010
STAFF: lec
CHANGES:
1) Branch point ag for TR9782/TR9239 4.33 release

TAG: seqcacheload-4-2-2-1
DATE: 07/16/2009
STAFF: dbm
CHANGES:
1) TR 9081; add cattle data from Homologene

TAG: seqcacheload-4-1-1-1
DATE: 08/01/2008
STAFF: sc
CHANGES: merge tr8490 to trunk

TAG: seqcacheload-tr8490-4
DATE: 07/18/2008
STAFF: sc
CHANGES: decided to leave my development debugging code in place, so added 
  debug flag to Configuration and seqmarker.py

TAG: seqcacheload-tr8490-3
DATE: 07/2/2008
STAFF: sc
CHANGES: The latest algorithm

TAG: seqcacheload-tr8490-2
DATE: 02/28/2008
STAFF: sc
CHANGES:
1) updated genbank rep algo to allow longest genbank DNA seq to be rep
   genomic.

TAG: seqcacheload-tr8490-1
DATE: 02/08/2008
STAFF: sc
CHANGES:
1) seqcacheload - update representative sequence algorithm

TAG: seqcacheload-tr8490-BP
DATE: 02/08/2008
STAFF: sc
CHANGES: Branch point tag for change to rep genomic algorithm

TAG: seqcacheload-3-5-4-1
DATE: 12/28/2007
STAFF: sc
CHANGES: TR8704
1) seqdummy.py - Fix RefSeq dummy sequence type. 
   Set to 'Not Loaded' (_SequenceType_key=316349)
   it was inadvertently set to 'RNA' (_SequenceType_key=316346)

TAG: seqcacheload-3-5-1-9
DATE: 01/18/2007
STAFF: lec
CHANGES:
1) seqmarker.py; include withdrawn markers

TAG: seqcacheload-3-5-1-8
DATE: 01/02/2007
STAFF: lec
CHANGES:
1) TR8072; excluded deleted sequences from rep algorithm; seqmarker.py

TAG: seqcacheload-3-5-1-7
TAG: seqcacheload-3-5-1-6
DATE: 12/28/2006
STAFF: sc
CHANGES:
1) from each *.csh removed ".csh" from log filename and -x from top
2) index.html -added

TAG: seqcacheload-3-5-1-5
TAG: seqcacheload-3-5-1-4
DATE: 11/13/2006
STAFF: lec
CHANGES: 
1) TIGR to DFCI; use keys instead of labels

TAG: seqcacheload-3-5-1-3
DATE: 10/12/2006
STAFF: lec
CHANGES: 
1) TR 7894;mgiconfig

TAG: seqcacheload-3-5-1-2
DATE: 09/21/2006
STAFF: lec
CHANGES: 
1) TR 7894;mgiconfig

TAG: seqcacheload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES: 