@@ -1,3 +1,9 @@
+TAG: seqcacheload-tr9782-?
+DATE: 02/24/2010
+STAFF: lec
+CHANGES:
+1) TR9239/seqmarker.py/add biotype lookup
+
 TAG: seqcacheload-tr9782-BP
 DATE: 02/18/2010
 STAFF: lec
